@@ -26,6 +26,7 @@ Sigla:
 + Removed split between frontend and backend.
 + Added an ID to the "view this page" link so it can be styled.
 + Added Danish translation for admin and file manager. Thanks Kenan.
+- Fixed issue where saving page layout without title did not result in error - issue 146
 - Fixed setAllSettings failing to update settings with SQLite - issue 145
 - Fixed issue with page_requested event parameter not being backwards compatible - issue 141
 - Fixed USE_MOD_REWRITE is undefined in case of system not yet being installed - issue 132
